2007-06-27	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Fixed scaling problem
	* PocketPC/Keyboard_gump: Cleaned up Keyboard_gump.h a bit
			Set private & public appropriately

2007-06-26	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Added keypad and hotpad keyboards
		Keypad is basically the numpad on a normal keypad
		Hotpad enables running and a few other nifty functions
	
2007-06-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc, gameclk.*: Fixed a few bugs in palette problems, particularly
	  when teleporting around.
	* content/bgkeyring/*/*: Fixed a few bugs in Zauriel's functions, improved
	  one of the cutscenes.
	* A few aligning spaces were converted to tabs.

2007-06-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Updated on-screen keyboard colors
	* PocketPC: Fixed alt & ctrl on-screen keyboard malfunction
	* PocketPC: Fixed minimize bug (had to tell SDL to minimize twice to be sure
				would erase the whole window, in certain PocketPC setups).
	* MSVC9: Updated Makefile.data so it wouldn't rebuild the flx files every time
				
2007-06-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Added on-screen keyboard feature

2007-06-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* palette.cc, gameclk.cc: Fixed a few problems with palette transitions and
	  faded-out palettes.
	* gumps/Paperdoll_gump.cc: Also allow showing of usecode container in BG
	  if Exult is compiled with -DSHOW_USECODE_CONTAINER

2007-06-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs where avatar faces would not be removed from the screen by
	  calls to remove_npc_face intrinsic.

2007-06-21	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
    * PocketPC: Added "exult.cfg.txt" as a config file option
		Exult will look for exult.cfg.txt first (using U7exists)
		If it is not found, then Exult will use exult.cfg