@@ -89,6 +89,7 @@ const struct Action {
 	  ActionOldFileGump, 0, "Save/restore", true, false, NONE, true },
 #ifdef UNDER_CE
 	{ "MINIMIZE_GAME", ActionMinimizeGame, 0, "Minimize game", true, false, NONE, true },
+	{ "TOUCHSCREEN_MODE", ActionTouchscreenMode, 0, "Touchscreen mode", true, false, NONE, true },
 #endif
 
 	{ "REPAINT", ActionRepaint, 0, "Repaint screen", false, false, NONE, true },
